--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ReferenceLinks"></activity>
         <activity
             android:name=".StepCounter"
             android:label="@string/title_activity_step_counter"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".NewFood" />
         <activity android:name=".RecommendedCaloricIntake" />
         <activity android:name=".MainActivity">
